--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.5",
-    "@angular/cdk": "~8.2.3",
+    "@angular/animations": "^10.1.5",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.5",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "bootstrap": "^4.5.2",
     "hammerjs": "^2.0.8",
+    "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
