--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@angular/service-worker": "~10.1.5",
     "bootstrap": "^4.5.2",
     "hammerjs": "^2.0.8",
+    "http-server-spa": "^1.3.0",
     "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
