--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@angular/service-worker": "~10.1.5",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^4.5.2",
     "hammerjs": "^2.0.8",
     "http-server-spa": "^1.3.0",
+    "masonry-layout": "^4.2.2",
     "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
